--- a/Portfolio/collections.html
+++ b/Portfolio/collections.html
@@ -5,8 +5,6 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
@@ -16,15 +14,12 @@
         * {
             margin: 0;
             padding: 0;
-            list-style: 0;
-            
+            list-style: 0;        
         }
-
         h2 {
             margin: 100px 0;
             text-align: center;
         }
-
         .card {
             margin-bottom: 10px;
         }
@@ -32,7 +27,6 @@
             text-align: center;
             color: white;
         }
-
         .down {
             margin-top: 80px;
             height: 300px;
@@ -58,7 +52,6 @@
         .github:hover{
             color: gray;
             text-decoration: none;
-
         }
     </style>
 </head>
@@ -79,16 +72,14 @@
     <div class="container">
         <h2>我的作品集</h2>
         <div class="row">
-
             <div class=" col-sm-6 col-xl-4 card" style="width: 18rem; border: none;">
                 <div class="card_context" style="border: solid Gray 1px;">
                     <img src="sheep.PNG" class="card-img-top" alt="..." style="vertical-align: baseline; ">
                     <div class="card-body">
                         <h5 class="card-title">電商網站(MVC)前端</h5>
-                        <!-- <p class="card-text">使用技術：</p> -->
                         <div class="connect">
-                            <a href="https://epicgameweb.azurewebsites.net/" class="btn btn-danger"><span
-                                    class="lean">Read more</span></a>
+                            <a href="https://epicgameweb.azurewebsites.net/" class="btn btn-danger">
+                                <span class="lean">Read more</span></a>
                         </div>
                     </div>
                 </div>
@@ -98,7 +89,6 @@
                     <img src="back sheep.PNG" class="card-img-top" alt="..." style="vertical-align: baseline; ">
                     <div class="card-body">
                         <h5 class="card-title">電商網站(MVC)後端</h5>
-                        <!-- <p class="card-text">使用技術：</p> -->
                         <div class="connect">
                             <a href="https://epicgamebackend.azurewebsites.net/Account/Login"
                                 class="btn btn-danger"><span class="lean">Read more</span></a>
@@ -111,7 +101,6 @@
                     <img src="fruid.PNG" class="card-img-top" alt="..." style="vertical-align: baseline; ">
                     <div class="card-body">
                         <h5 class="card-title">網頁切版</h5>
-                        <!-- <p class="card-text">使用技術：</p> -->
                         <div class="connect">
                             <a href="http://eileen01.azurewebsites.net/homework/imgOnePageWeb/hw02.html"
                                 class="btn btn-danger"><span class="lean">Read more</span></a>
@@ -125,7 +114,6 @@
                     <img src="building.PNG" class="card-img-top" alt="..." style="vertical-align: baseline; ">
                     <div class="card-body">
                         <h5 class="card-title">網頁切版</h5>
-                        <!-- <p class="card-text">使用技術：</p> -->
                         <div class="connect">
                             <a href="https://eileen01.azurewebsites.net/homework/tallbuliding/hw03.html"
                                 class="btn btn-danger"><span class="lean">Read more</span></a>
@@ -138,7 +126,6 @@
                     <img src="hair.PNG" class="card-img-top" alt="..." style="vertical-align: baseline; ">
                     <div class="card-body">
                         <h5 class="card-title">Bootstrap切版</h5>
-                        <!-- <p class="card-text">使用技術：</p> -->
                         <div class="connect">
                             <a href="https://eileen01.azurewebsites.net/homework/hair/hw04.html"
                                 class="btn btn-danger"><span class="lean">Read more</span></a>
@@ -151,7 +138,6 @@
                     <img src="1a2b.PNG" class="card-img-top" alt="..." style="vertical-align: baseline; ">
                     <div class="card-body">
                         <h5 class="card-title">1A2B遊戲</h5>
-                        <!-- <p class="card-text">使用技術：</p> -->
                         <div class="connect">
                             <a href="https://eileen01.azurewebsites.net/homework/hw_script/GuessNumber/guess-number.html"
                                 class="btn btn-danger"><span class="lean">Read more</span></a>
@@ -164,7 +150,6 @@
                     <img src="iphone.PNG" class="card-img-top" alt="..." style="vertical-align: baseline; ">
                     <div class="card-body">
                         <h5 class="card-title">Apple</h5>
-                        <!-- <p class="card-text">使用技術：</p> -->
                         <div class="connect">
                             <a href="https://eileen01.azurewebsites.net/homework/hw_script/apple_iphone.html"
                                 class="btn btn-danger"><span class="lean">Read more</span></a>
@@ -177,7 +162,6 @@
                     <img src="lol.PNG" class="card-img-top" alt="..." style="vertical-align: baseline; ">
                     <div class="card-body">
                         <h5 class="card-title">LoL</h5>
-                        <!-- <p class="card-text">使用技術：</p> -->
                         <div class="connect">
                             <a href="https://eileen01.azurewebsites.net/homework/hw_script/lol/lol.html"
                                 class="btn btn-danger"><span class="lean">Read more</span></a>
@@ -191,7 +175,6 @@
                     <img src="map.png" class="card-img-top" alt="..." style="vertical-align: baseline; ">
                     <div class="card-body">
                         <h5 class="card-title">口罩地圖</h5>
-                        <!-- <p class="card-text">使用技術：</p> -->
                         <div class="connect">
                             <a href="https://eileen01.azurewebsites.net/homework/hw_script/googlemap/index.html"
                                 class="btn btn-danger"><span class="lean">Read more</span></a>
@@ -204,7 +187,6 @@
                     <img src="number.PNG" class="card-img-top" alt="..." style="vertical-align: baseline; ">
                     <div class="card-body">
                         <h5 class="card-title">計算機</h5>
-                        <!-- <p class="card-text">使用技術：</p> -->
                         <div class="connect">
                             <a href="https://eileen01.azurewebsites.net/homework/hw_script/hw03_%E8%A8%88%E7%AE%97%E6%A9%9F.html"
                                 class="btn btn-danger"><span class="lean">Read more</span></a>
@@ -217,7 +199,6 @@
                     <img src="pokemon.PNG" class="card-img-top" alt="..." style="vertical-align: baseline; ">
                     <div class="card-body">
                         <h5 class="card-title">寶可夢</h5>
-                        <!-- <p class="card-text">使用技術：</p> -->
                         <div class="connect">
                             <a href="https://eileen01.azurewebsites.net/homework/hw_script/pokemon_list.html"
                                 class="btn btn-danger"><span class="lean">Read more</span></a>
