--- a/homework/hw_script/googlemap/index.html
+++ b/homework/hw_script/googlemap/index.html
@@ -34,7 +34,7 @@
                     var store = { lat: num[1], lng: num[0] };
                     // console.log(store);
 
-                    // console.log(data);
+                    console.log(data);
 
                     var adult = data.features[i].properties.masksLeft;
                     var child = data.features[i].properties.childMasksLeft;
