--- a/buy/layout.html
+++ b/buy/layout.html
@@ -31,7 +31,7 @@
         <nav class="navbar fixed-top postitive-flex navbar-expand-sm navbar-light">
             <a class="navbar-brand" href="#">
                 <!-- <img src="/docs/4.5/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy"> -->
-                <i class="fas fa-shopping-cart"></i> Buy
+                <img src="biglogo.png" alt="" style="width: 60px;"> GroupBuy
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" style="border: none;">
@@ -62,26 +62,130 @@
             <div style=" width: 100%; height: 560px;">
                 <div class="container text-center pl-sm-0 pr-sm-0">
                     <h2 class="title text-white pt-3">Initiate teams buying</h2>
-                    <p class="explan text-white" style="text-align: center;">Group buying is so popular now <br>Lorem,
-                        ipsum dolor sit amet Non quae accusamus quisquam soluta explicabo qui reiciendis iusto
-                        voluptatibus, quasi commodi ut labore molestias, molesti
+                    <p class="explan text-white" style="text-align: center;">Group buying is so popular now <br>A
+                        chatbot on Microsoft Teams: The user can communicate with the bot and found an order form for
+                        the team on the Microsoft Teams. Through the app, the other members can order their meals by
+                        tick the checkbox on the Teams channel.
                     </p>
-                    <a class="addtoteams" href="#" style="text-decoration: none;">Add to Teams</a>
+                    <a class="addtoteams"
+                        href="https://www.microsoft.com/zh-tw/microsoft-365/microsoft-teams/group-chat-software?SilentAuth=1"
+                        target="_blank" style="text-decoration: none;">Add to Teams</a>
                     <!-- <img class="people" src="friend1.png" alt=""> -->
                 </div>
             </div>
         </header>
         <section class="block">
-            <div class="container text-center">
-                <h2 class="smalltitle">ni hao</h2>
-                <p class="smallword">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus mollitia ut eum, similique
-                    non temporibus animi quibusdam expedita ex minima voluptas, blanditiis rem! A quae nam nihil
-                    quibusdam hic doloribus.</p>
+            <div class="container text-center" style="max-width: 900px;">
+                <h2 class="smalltitle">How It Works</h2>
+                <p class="smallword">只需要創建一個teams頻道並邀請同事即可,groupbuy會向你們介紹功能,讓大家一起團購</p>
+            </div>
+
+            <div class="container textpic" style="margin-top: 100px; margin-bottom: 200px;">
+                <div class="col-12 col-lg-5">
+                    <h3 class="texttitle">互動</h3>
+                    <p class="textword">通過團購餐點,讓團隊彼此互動,加強關係</p>
+                </div>
+                <div class="col-12 col-lg-7">
+                    <img src="#" alt="">
+                </div>
+            </div>
+
+            <div class="container textpic" style="margin-top: 100px; margin-bottom: 200px;">
+                <div class="col-12 col-lg-5">
+                    <h3 class="texttitle">客製化團購</h3>
+                    <p class="textword">自由度高,可客製化自己想要的餐點,邀請團隊一起點餐</p>
+                </div>
+                <div class="col-12 col-lg-7 img-l">
+                    <img src="#" alt="">
+                </div>
+            </div>
+
+            <div class="container textpic" style="margin-top: 100px; margin-bottom: 200px;">
+                <div class="col-12 col-lg-5">
+                    <h3 class="texttitle">保留過去訂單</h3>
+                    <p class="textword">在結束訂單後,會呈現所有人的訂購資訊以及可查詢紀錄,幫助大家查看</p>
+                </div>
+                <div class="col-12 col-lg-7">
+                    <img src="#" alt="">
+                </div>
+            </div>
+
+            <div class="container textpic" style="margin-top: 100px; margin-bottom: 200px;">
+                <div class="col-12 col-lg-5">
+                    <h3 class="texttitle">互動</h3>
+                    <p class="textword">只需要創建一個teams頻道並邀請同事即可,groupbuy會向你們介紹功能,讓大家一起團購</p>
+                </div>
+                <div class="col-12 col-lg-7 img-l">
+                    <img src="#" alt="">
+                </div>
             </div>
         </section>
+        <section class="block">
+            <div class="container text-center" style="margin-bottom: 100px;">
+                <h3 class="featurestitle">Advanced Features</h3>
+            </div>
+
+
+            <div class="container d-flex text-center" >
+                <div class="row">
+                    <div class="icon_context col-6 col-lg-4">
+                        <div class="icon">
+                            <img src="Custom groupbuy.png">
+                        </div>
+                        <p class="icon_name">Custom groupbuy</p>
+                    </div>
+                    <div class="icon_context col-6 col-lg-4">
+                        <div class="icon">
+                            <img src="Schedule.png">
+                        </div>
+                        <p class="icon_name">Schedule</p>
+
+                    </div>
+                    <div class="icon_context col-6 col-lg-4">
+                        <div class="icon">
+                            <img src="Payment.png">
+                        </div>
+                        <p class="icon_name">Payment</p>
+
+                    </div>
+                    <div class="icon_context col-6 col-lg-4">
+                        <div class="icon">
+                            <img src="Remind.png">
+                        </div>
+                        <p class="icon_name">Remind</p>
+
+                    </div>
+                    <div class="icon_context col-6 col-lg-4">
+                        <div class="icon">
+                            <img src="Check past orders.png">
+                        </div>
+                        <p class="icon_name">Check past orders</p>
+
+                    </div>
+                    <div class="icon_context col-6 col-lg-4">
+                        <div class="icon">
+                            <img src="Favorites.png">
+                        </div>
+                        <p class="icon_name">Favorites</p>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
     </main>
 
-
+    <footer class="container-fluid" style="background-color: #f5b625;">
+            <div class="row" style="padding: 5px; justify-content: space-between; margin: 0 20px;">
+                <div class="mation">
+                    <img  src="biglogo.png" alt="" style="width: 40px;"><span>GroupBuy</span>
+                </div>
+                <div class="mation">
+                    <span>© 2020 GroupBuy Technologies Inc.All rights reserved.</span>
+                </div>
+            </div>
+    </footer>
 
 
 </body>
