--- a/buy/layout.html
+++ b/buy/layout.html
@@ -12,11 +12,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.11/vue.min.js">
     <script src="https://kit.fontawesome.com/83fb5d23dd.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="layout.css">
-    <title>導覽列</title>
+    <title>GroupBuy</title>
 </head>
 
 <body>
-
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
