--- a/buy/layout.html
+++ b/buy/layout.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.11/vue.min.js">
     <script src="https://kit.fontawesome.com/83fb5d23dd.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="layout.css">
+    <link rel="stylesheet" href="buy.css">
     <title>GroupBuy</title>
 </head>
 
