--- a/buy/layout.html
+++ b/buy/layout.html
@@ -30,7 +30,7 @@
         <nav class="navbar fixed-top postitive-flex navbar-expand-sm navbar-light">
             <a class="navbar-brand" href="#">
                 <!-- <img src="/docs/4.5/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy"> -->
-                <img src="biglogo.png" alt="" style="width: 60px;"> GroupBuy
+                <img src="logo3.png" alt="" style="width: 60px;"> GroupBuy
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" style="border: none;">
@@ -42,7 +42,7 @@
                     <li class="nav-item active">
                         <a class="nav-link" href="#">Group Buying<span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="#">Schedule</a>
                     </li>
                     <li class="nav-item">
@@ -50,7 +50,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Join Buying</a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </nav>
@@ -76,52 +76,61 @@
         <section class="block">
             <div class="container text-center" style="max-width: 900px;">
                 <h2 class="smalltitle">How It Works</h2>
-                <p class="smallword">只需要創建一個teams頻道並邀請同事即可,groupbuy會向你們介紹功能,讓大家一起團購</p>
+                <p class="smallword">
+                    只需要創建一個teams頻道並邀請同事即可,groupbuy會向你們介紹功能,讓大家一起團購
+                    Just create a Team channel and invite the right people,groupbuy will introduce you to function, so that we buy together!</p>
             </div>
 
             <div class="container textpic" style="margin-top: 100px; margin-bottom: 200px;">
-                <div class="col-12 col-lg-5">
-                    <h3 class="texttitle">互動</h3>
-                    <p class="textword">通過團購餐點,讓團隊彼此互動,加強關係</p>
+                <div class="col-12 col-lg-4">
+                    <h3 class="texttitle">Interactive</h3>
+                    <p class="textword">
+                        我們可以用下指令的方式,透過機器人為我們創建一個團購,讓團隊成員都能在這個團購中選購他們的餐點
+                        We can use the instructions to create a group purchase for us through robots, so that team members can buy their meals in this group purchase.</p>
                 </div>
-                <div class="col-12 col-lg-7">
-                    <img src="#" alt="">
-                </div>
-            </div>
-
-            <div class="container textpic" style="margin-top: 100px; margin-bottom: 200px;">
-                <div class="col-12 col-lg-5">
-                    <h3 class="texttitle">客製化團購</h3>
-                    <p class="textword">自由度高,可客製化自己想要的餐點,邀請團隊一起點餐</p>
-                </div>
-                <div class="col-12 col-lg-7 img-l">
-                    <img src="#" alt="">
+                <div class="text_pic col-12 col-lg-8">
+                    <img src="Interactive.png" alt=""class="img_block">
                 </div>
             </div>
 
             <div class="container textpic" style="margin-top: 100px; margin-bottom: 200px;">
-                <div class="col-12 col-lg-5">
-                    <h3 class="texttitle">保留過去訂單</h3>
-                    <p class="textword">在結束訂單後,會呈現所有人的訂購資訊以及可查詢紀錄,幫助大家查看</p>
+                <div class="col-12 col-lg-4">
+                    <h3 class="texttitle">CustomizedBuy</h3>
+                    <p class="textword">
+                        自由度高,可客製化自己想要的餐廳及餐點,邀請團隊一起點餐
+                        High degreeof freedom, can make the restaurant and meals you want, invite the team a starting meal.</p>
                 </div>
-                <div class="col-12 col-lg-7">
-                    <img src="#" alt="">
+                <div class="text_pic col-12 col-lg-8 img-l">
+                    <img src="com.png" alt=""class="img_block">
                 </div>
             </div>
 
             <div class="container textpic" style="margin-top: 100px; margin-bottom: 200px;">
-                <div class="col-12 col-lg-5">
-                    <h3 class="texttitle">互動</h3>
-                    <p class="textword">只需要創建一個teams頻道並邀請同事即可,groupbuy會向你們介紹功能,讓大家一起團購</p>
+                <div class="col-12 col-lg-4">
+                    <h3 class="texttitle">Keep your past orders保留你的訂單紀錄</h3>
+                    <p class="textword">
+                        在結束訂單後,會呈現所有人的訂購資訊以及可查詢紀錄,幫助大家查看
+                        After the order is completed, everyone's order information and queryable records are presented to help you view them.</p>
                 </div>
-                <div class="col-12 col-lg-7 img-l">
-                    <img src="#" alt="">
+                <div class="text_pic col-12 col-lg-8">
+                    <img src="order.png" alt="" class="img_block">
+                </div>
+            </div>
+
+            <div class="container textpic" style="margin-top: 100px; margin-bottom: 200px;">
+                <div class="col-12 col-lg-4">
+                    <h3 class="texttitle">Favorite</h3>
+                    <p class="textword">
+                        Add your favorite restaurants to your Library</p>
+                </div>
+                <div class="text_pic col-12 col-lg-8 img-l">
+                    <img src="library.png" alt=""class="img_block">
                 </div>
             </div>
         </section>
         <section class="block">
             <div class="container text-center" style="margin-bottom: 100px;">
-                <h3 class="featurestitle">Advanced Features</h3>
+                <h3 class="featurestitle">Features</h3>
             </div>
 
 
@@ -178,7 +187,7 @@
     <footer class="container-fluid" style="background-color: #f5b625;">
             <div class="row" style="padding: 5px; justify-content: space-between; margin: 0 20px;">
                 <div class="mation">
-                    <img  src="biglogo.png" alt="" style="width: 40px;"><span>GroupBuy</span>
+                    <img  src="logo3.png" alt="" style="width: 40px;"><span>GroupBuy</span>
                 </div>
                 <div class="mation">
                     <span>© 2020 GroupBuy Technologies Inc.All rights reserved.</span>
