--- a/buy/layout.html
+++ b/buy/layout.html
@@ -104,7 +104,7 @@
 
             <div class="container textpic" style="margin-top: 100px; margin-bottom: 200px;">
                 <div class="col-12 col-lg-4">
-                    <h3 class="texttitle">Keep your past orders保留你的訂單紀錄</h3>
+                    <h3 class="texttitle">Keep your past orders</h3>
                     <p class="textword">
                         After the order is completed, everyone's order information and queryable records are presented to help you view them.</p>
                 </div>
