--- a/buy/layout.html
+++ b/buy/layout.html
@@ -163,7 +163,7 @@
                         <div class="icon">
                             <img src="Check past orders.png">
                         </div>
-                        <p class="icon_name">Check past orders</p>
+                        <p class="icon_name">Check order history</p>
 
                     </div>
                     <div class="icon_context col-6 col-lg-4">
